* LINQ Where と ForEach を実装。

--- a/Surviveplus/ActionDelegate.cls
+++ b/Surviveplus/ActionDelegate.cls
@@ -2,20 +2,20 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "FuncDelegate"
+Attribute VB_Name = "ActionDelegate"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
-Attribute VB_Exposed = True
+Attribute VB_Exposed = False
 Option Explicit
 '------------------------------------------------------------------------
-' FuncDelegate クラス
+' ActionDelegate クラス
 '------------------------------------------------------------------------
 '   目的：      匿名関数デリゲート を司るクラスです。
 '   注釈：      このクラスを使用するには、Microsoft Script Control 1.0 への参照設定が必要です。
-'   使用方法：  FuncModule の Func メソッドを使って初期化して使用してください。
-'                  ＜例＞If Func("a,b", "a=a*10:Return a+b").Run(1,1) = 11 Then MsgBox "OK"
-'   変更履歴：  SHIN-ICHI 2010/10/9 - 新規作成
+'   使用方法：  FuncModule の Action メソッドを使って初期化して使用してください。
+'                  ＜例＞Action("a,b", "a=a*10:MsgBox a+b").Run(1,1)
+'   変更履歴：  SHIN-ICHI 2010/10/21 - 新規作成
 '   MIT License / Copyright(C) 2010 SHIN-ICHI all rights reserverd. ( http:// surviveplus.net )
 '------------------------------------------------------------------------
 
@@ -37,18 +37,16 @@ Public Sub SetStatement(args As String, statements As String)
 End Sub
 
 '------------------------------------------------------------------------
-'   目的：      匿名関数を実行して結果を返します。
+'   目的：      匿名関数を実行します。
 '   入力：      引数 args - 関数に渡す引数（初期化時に指定した個数）指定します。
 '                 数の数と順番は初期化時に指定した args に合わせてください。
-'   戻り値：    実行した結果を返します。戻り値の内容は statement の内容によって異なります。
-'                  例えば statement で評価式を Return している場合は Boolean を返します。
 '   注釈：      このメソッド名が Invoke でなく Run なのは、Invoke が Visual Basic 6系 の予約語であるためです。
-'                 また、このメソッドを既定のプロパティとして実装しなかったのは、FuncDelegate オブジェクトの変数への割り当てが面倒になるためです。
-'   使用方法：  ＜例＞If Func("a,b", "a=a*10:Return a+b").Run(1,1) = 11 Then MsgBox "OK"
-'   変更履歴：  SHIN-ICHI 2010/10/9 - 新規作成
+'                 また、このメソッドを既定のプロパティとして実装しなかったのは、ActionDelegate オブジェクトの変数への割り当てが面倒になるためです。
+'   使用方法：  ＜例＞Action("a,b", "a=a*10:MsgBox a+b").Run(1,1)
+'   変更履歴：  SHIN-ICHI 2010/10/21 - 新規作成
 '   MIT License / Copyright(C) 2010 SHIN-ICHI all rights reserverd. ( http:// surviveplus.net )
 '------------------------------------------------------------------------
-Public Function Run(ParamArray args() As Variant) As Variant
+Public Function Run(ParamArray args() As Variant)
     myScriptControl.Reset
     myScriptControl.Language = "VBScript"
     
@@ -70,14 +68,10 @@ Public Function Run(ParamArray args() As Variant) As Variant
         If UBound(args) < index Then Exit For
     Next s
     
-    Dim subOrFunction As String: subOrFunction = IIf(InStr(valueOfStatements, "Return ") > 0, "Function", "Sub")
-    myScriptControl.AddCode (subOrFunction & " mydelegate(" & argsNamesText & "): " & replace(valueOfStatements, "Return ", "mydelegate = ") & ":End " & subOrFunction)
-    If InStr(valueOfStatements, "Return ") > 0 Then
-        Run = myScriptControl.Eval("mydelegate(" & argsValuesText & ")")
-    Else
-        myScriptControl.ExecuteStatement ("mydelegate(" & argsValuesText & ")")
-    End If
+    myScriptControl.AddCode ("Sub mydelegate(" & argsNamesText & "): " & replace(valueOfStatements, "Return ", "mydelegate = ") & ":End Sub")
+    myScriptControl.ExecuteStatement ("mydelegate(" & argsValuesText & ")")
 End Function
+
 
 
 
