--- a/Surviveplus/IEnumerator.cls
+++ b/Surviveplus/IEnumerator.cls
@@ -12,38 +12,70 @@ Option Explicit
 Public targetList As Variant 'Range
 Public Current As Variant 'Range
 Public index As Integer
+Public f As FuncDelegate
+
 
 Public Function MoveNext() As Boolean
-    index = index + 1
-    Dim count As Integer
-    If IsObject(targetList) Then
-        count = targetList.count
-    Else
-        count = UBound(targetList)
-    End If
-    
-    If count < index Then
-        MoveNext = False
-        Exit Function
-    Else
-        MoveNext = True
-        If IsObject(targetList(index)) Then
-            Set Current = targetList(index)
+
+    Select Case TypeName(targetList)
+    Case "IEnumerator"
+        If f Is Nothing Then
+            MoveNext = targetList.MoveNext
+            If IsObject(targetList.Current) Then
+                Set Me.Current = targetList.Current
+            Else
+                Me.Current = targetList.Current
+            End If
+            Exit Function
         Else
-            Current = targetList(index)
-        End If
-        Exit Function
-    End If
-
-End Function
-
-Public Function MoveNextWhere(w As FuncDelegate) As Boolean
-    While MoveNext()
-        If w.Run(Current) Then
-            MoveNextWhere = True
+            While targetList.MoveNext
+                If f.Run(targetList.Current) Then
+                    MoveNext = True
+                    If IsObject(targetList.Current) Then
+                        Set Me.Current = targetList.Current
+                    Else
+                        Me.Current = targetList.Current
+                    End If
+                    Exit Function
+                End If
+            Wend
+            MoveNext = False
             Exit Function
         End If
-    Wend
-    MoveNextWhere = False
-    Exit Function
+    
+    Case Else
+        index = index + 1
+        Dim count As Integer
+        If IsObject(targetList) Then
+            count = targetList.count
+        Else
+            count = UBound(targetList)
+        End If
+        
+        If count < index Then
+            MoveNext = False
+            Exit Function
+        Else
+            MoveNext = True
+            If IsObject(targetList(index)) Then
+                Set Current = targetList(index)
+            Else
+                Current = targetList(index)
+            End If
+            Exit Function
+        End If
+
+    End Select
+
 End Function
+
+'Public Function MoveNextWhere(w As FuncDelegate) As Boolean
+'    While MoveNext()
+'        If w.Run(Current) Then
+'            MoveNextWhere = True
+'            Exit Function
+'        End If
+'    Wend
+'    MoveNextWhere = False
+'    Exit Function
+'End Function
